--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,7 +3,7 @@ md-sidenav-layout.m2app-dark {
 }
 
 .app-content {
-  padding: 20px;
+  /*padding: 20px;*/
 }
 
 .app-content md-card {
@@ -70,4 +70,10 @@ md-sidenav-layout.m2app-dark {
 
 .app-progress {
   margin: 20px;
+}
+
+
+.carousel-item img{
+  width: 1150px;
+  height: 752px;
 }
