--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,14 +4,36 @@
 
   <md-sidenav #sidenav mode="side" class="app-sidenav">
     Sidenav
+    <md-list>
+ <md-list-item>  <button md-button>Flat button</button> </md-list-item>
+ <md-list-item>  <button md-button>Flat button</button> </md-list-item>
+ <md-list-item>  <button md-button>Flat button</button> </md-list-item>
+</md-list>
   </md-sidenav>
+
+  <md-progress-bar
+      class="app-progress"
+      mode="indeterminate"
+      aria-label="Indeterminate progress-bar example"></md-progress-bar>
 
   <md-toolbar color="primary">
     <button class="app-icon-button" (click)="sidenav.toggle()">
       <i class="material-icons app-toolbar-menu">menu</i>
     </button>
 
-    Angular Material2 Example App
+    Free me
+    <button md-button [md-menu-trigger-for]="menu">
+      Today
+    </button>
+
+
+        <md-menu #menu="mdMenu">
+          <button md-menu-item>Today</button>
+          <button md-menu-item>Yesterday</button>
+          <button md-menu-item>1 Week</button>
+          <button md-menu-item>1 Month</button>
+        </md-menu>
+
     <h1>
       {{title}}
     </h1>
@@ -22,84 +44,63 @@
 
   <div class="app-content">
 
-    <md-card>
-      <button md-button>FLAT</button>
-      <button md-raised-button md-tooltip="This is a tooltip!">RAISED</button>
-      <button md-raised-button color="primary">PRIMARY RAISED</button>
-      <button md-raised-button color="accent">ACCENT RAISED</button>
-    </md-card>
+
+
+    <md-grid-list cols="4" rowHeight="250px">
+
+      <md-grid-tile [colspan]=3 [rowspan]="3">
+        <carousel [interval]="myInterval" [noWrap]="noWrapSlides">
+
+             <slide *ngFor="let slidez of slides">
+
+               <img [src]="slidez.image" style="margin:auto;">
+               <div class="carousel-caption">
+                 <h4>Slide</h4>
+                 <p>{{slidez.text}}</p>
+               </div>
+
+             </slide>
+
+        </carousel>
+      </md-grid-tile>
+
+      <md-grid-tile >
+
+      </md-grid-tile>
+
+      <md-grid-tile >
+       one2
+      </md-grid-tile>
+
+      <md-grid-tile >
+       one3
+      </md-grid-tile>
+
+    </md-grid-list>
+
+
+    <!-- <md-grid-list cols="4" rowHeight="250px"> -->
+    <div *ngFor="let feed of feeds">
+      <!-- {{feed.info.title}} -->
+       <app-feed-card *ngFor="let item of feed.items" [feed]="item">
+
+       </app-feed-card>
+    </div >
+    <!-- </md-grid-list> -->
+
+
+
+    <!-- <div class='md-padding' layout="row" flex>
+       <div layout="row" flex>
+          <div  ng-repeat="user in users" flex>
+              ... Your content here
+          </div>
+       </div>
+    </div> -->
+
 
     <md-card>
-      <md-checkbox>Unchecked</md-checkbox>
-      <md-checkbox [checked]="true">Checked</md-checkbox>
-      <md-checkbox [indeterminate]="true">Indeterminate</md-checkbox>
-      <md-checkbox [disabled]="true">Disabled</md-checkbox>
-    </md-card>
-
-    <md-card>
-      <md-radio-button name="symbol">Alpha</md-radio-button>
-      <md-radio-button name="symbol">Beta</md-radio-button>
-      <md-radio-button name="symbol" disabled>Gamma</md-radio-button>
-    </md-card>
-
-    <md-card class="app-input-section">
-      <md-input placeholder="First name"></md-input>
-
-      <md-input #nickname placeholder="Nickname" maxlength="50">
-        <md-hint align="end">
-          {{nickname.characterCount}} / 50
-        </md-hint>
-      </md-input>
-
-      <md-input>
-        <md-placeholder>
-          <i class="material-icons app-input-icon">android</i> Favorite phone
-        </md-placeholder>
-      </md-input>
-
-      <md-input placeholder="Motorcycle model">
-        <span md-prefix>
-          <i class="material-icons app-input-icon">motorcycle</i>
-          &nbsp;
-        </span>
-      </md-input>
-    </md-card>
-
-    <md-card>
-      <md-list class="app-list">
-        <md-list-item *ngFor="let food of foods">
-          <h3 md-line>{{food.name}}</h3>
-          <p md-line class="demo-secondary-text">{{food.rating}}</p>
-        </md-list-item>
-      </md-list>
-    </md-card>
-
-    <md-card>
-      <md-spinner class="app-spinner"></md-spinner>
-      <md-spinner color="accent" class="app-spinner"></md-spinner>
-    </md-card>
-
-    <md-card>
-      <label>
-        Indeterminate progress-bar
-        <md-progress-bar
-            class="app-progress"
-            mode="indeterminate"
-            aria-label="Indeterminate progress-bar example"></md-progress-bar>
-      </label>
-
-      <label>
-        Determinate progress bar - {{progress}}%
-        <md-progress-bar
-            class="app-progress"
-            color="accent"
-            mode="determinate"
-            [value]="progress"
-            aria-label="Determinate progress-bar example"></md-progress-bar>
-      </label>
-    </md-card>
-
-    <md-card>
+      <md-icon>build</md-icon>
       <md-tab-group>
         <md-tab label="Earth">
           <p>EARTH</p>
@@ -110,21 +111,7 @@
       </md-tab-group>
     </md-card>
 
-    <md-card>
-      <md-icon>build</md-icon>
-    </md-card>
 
-    <md-card>
-      <button md-button [md-menu-trigger-for]="menu">
-        MENU
-      </button>
-    </md-card>
-
-    <md-menu #menu="mdMenu">
-      <button md-menu-item>Lemon</button>
-      <button md-menu-item>Lime</button>
-      <button md-menu-item>Banana</button>
-    </md-menu>
 
     <md-card>
       <p>Last dialog result: {{lastDialogResult}}</p>
@@ -135,7 +122,3 @@
   </div>
 
 </md-sidenav-layout>
-
-<span class="app-action" [class.m2app-dark]="isDarkTheme">
-  <button md-fab><md-icon>check circle</md-icon></button>
-</span>
