--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -77,3 +77,135 @@ md-sidenav-layout.m2app-dark {
   width: 1150px;
   height: 752px;
 }
+
+
+#slide .carousel-caption
+{
+  z-index: 99;
+  left: 5%;
+  right: 5%;
+}
+#slide .description
+{
+  color: white;
+}
+
+#slide .title{
+  font-size: 30px;
+  color: white;
+  cursor: pointer;
+}
+
+#slide .title:hover{
+  text-decoration: underline;
+}
+
+#slide .background
+{
+  background: rgba(0, 0, 0, 0) linear-gradient(transparent, rgba(0, 0, 0, 0.85)) repeat scroll 0 0;
+  z-index: 8;
+  position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 100%
+}
+
+
+#slide .news-time
+{
+  background: rgba(0, 0, 0, 0.5);
+  color: #FBC02D;
+}
+
+#slide .author
+{
+  color: black;
+  background-color: #FBC02D;
+}
+
+
+
+#slide .news-category p {
+    /*color: #fff;*/
+    font-size: 12px;
+    padding: 3px 10px;
+    border-radius: 2px;
+      display: table;
+  }
+
+
+#slide-sider
+{
+
+}
+
+
+#slide-sider .carousel-caption
+{
+  z-index: 99;
+  left: 5%;
+  right: 5%;
+       padding-bottom: 0px;
+       bottom: 0px;
+       text-align: left;
+}
+
+#slide-sider  img{
+  width: 685px;
+}
+
+#slide-sider .description
+{
+  color: white;
+}
+
+#slide-sider .title{
+  font-size: 20px;
+  color: white;
+  cursor: pointer;
+}
+
+#slide-sider .title:hover{
+  text-decoration: underline;
+}
+
+#slide-sider .background
+{
+  background: rgba(0, 0, 0, 0) linear-gradient(transparent, rgba(0, 0, 0, 0.85)) repeat scroll 0 0;
+  z-index: 8;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  right: 0;
+}
+
+
+#slide-sider .news-time
+{
+  background: rgba(0, 0, 0, 0.5);
+  color: #FBC02D;
+      /*color: $primary-color;*/
+}
+
+#slide-sider .author
+{
+  color: black;
+  background-color: #FBC02D;
+}
+
+
+
+#slide-sider .news-category p {
+    /*color: #fff;*/
+    font-size: 12px;
+    padding: 3px 10px;
+    border-radius: 2px;
+      display: table;
+  }
+
+
+
+  #blog img {
+      min-height: 472px;
+  }
