--- a/src/theme-style.scss
+++ b/src/theme-style.scss
@@ -5,10 +5,26 @@
 
 @include md-core();
 
-$primary: md-palette($md-deep-purple);
-$accent:  md-palette($md-amber, A200, A100, A400);
 
-$theme: md-light-theme($primary, $accent);
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue.
+
+// The warn palette is optional (defaults to red).
+
+
+// Create the theme object (a Sass map containing all of the palettes).
+
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+// @include angular-material-theme($candy-app-theme);
+
+$primary: md-palette($md-yellow, 700, 500, 900);
+$accent:  md-palette($md-blue-grey, A200, A100, A400);
+$warn:    md-palette($md-red);
+$theme: md-light-theme($primary, $accent, $warn);
 
 @include angular-material-theme($theme);
 
