--- a/src/app/feed-card/feed-card.component.html
+++ b/src/app/feed-card/feed-card.component.html
@@ -1,4 +1,11 @@
-
+<!-- title: string, //titlo da noticia
+link: string, //link da noticia
+// guid: string,
+pubDate: Date, //data
+// categories: Array<string>,
+sourceName: string,
+thumbnail: string,
+description: string -->
 <!-- News Blog Box -->
                        <div class="news-blog z-depth-1">
                            <!-- News Blog Image -->
@@ -7,7 +14,7 @@
                            </div>
                            <!-- News Blog Category -->
                            <div class="news-category">
-                               <span class="author">  {{feed.author}}</span>
+                               <span class="author">  {{feed.sourceName}}</span>
                                <!-- Dropdown -->
                                <button md-icon-button [mdMenuTriggerFor]="menu" style="left: 62%;position: relative;z-index: 99;">
                                    <md-icon>more_vert</md-icon>
