--- a/src/app/video-card/video-card.component.html
+++ b/src/app/video-card/video-card.component.html
@@ -1,13 +1,5 @@
-<!-- title: string, //titlo da noticia
-link: string, //link da noticia
-// guid: string,
-pubDate: Date, //data
-// categories: Array<string>,
-sourceName: string,
-thumbnail: string,
-description: string -->
-<!-- News Blog Box -->
-                       <div class="news-blog z-depth-1">
+
+                       <div class="news-video z-depth-1">
                            <!-- News Blog Image -->
                            <div class="image">
                                <img class="responsive-img" src="{{feed.thumbnail}}" alt="news Image">
@@ -16,7 +8,7 @@ description: string -->
                            <div class="news-category">
                                <span class="author">  {{feed.sourceName}}</span>
                                <!-- Dropdown -->
-                               <!-- <button md-icon-button [mdMenuTriggerFor]="menu" style="left: 62%;position: relative;z-index: 99;">
+                               <!-- <button md-icon-button [mdMenuTriggerFor]="menu" style="color:white;left: 52%;position: relative;z-index: 99;">
                                    <md-icon>more_vert</md-icon>
                                  </button>
                                  <md-menu #menu="mdMenu">
@@ -47,4 +39,9 @@ description: string -->
                                  <p>{{feed.description | stripHtmlTags}}</p>
                                </div>
                            </div>
+                            <div class="play-icon" (click)="openLinkInBrowser()">
+                                  <div class="play" >
+                                     <md-icon >play_circle_filled</md-icon>
+                                  </div>
+                            </div>
                        </div>
