bug fix responsive, desktop ready. todo: fix mobile screen

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -217,6 +217,12 @@ md-sidenav {
 #share-buttons
 {
   background-color:#212121;
+  color: white !important;
+}
+
+.sb-container .sb-buttons .sb-button-count
+{
+  color: white !important;
 }
 /*
 .sb-container .sb-buttons
