--- a/src/app/feed-card/feed-card.component.css
+++ b/src/app/feed-card/feed-card.component.css
@@ -61,7 +61,22 @@
 }
 
 /*@media only screen and (max-width: 1430px) {
+problema com
+1366x768
+1600x1200
+ 1680x1050
+  1920x1200
+  	2560x1440
 
+    Nexus 7 2013 (600x960)
+     iPad 3 (768x1024)
+     Nexus 5 (360x598)
+     Nexus 4 (384x598)
+     Moto X (360x598)
+     iPhone 6 Plus (414x736)
+     iPhone 6 (375x667)
+     iPhone 5 (320x568)
+     iPhone 4 (320x480)
 }*/
 
 /*lager then 768*/
