--- a/src/app/feed-card/feed-card.component.html
+++ b/src/app/feed-card/feed-card.component.html
@@ -3,7 +3,7 @@
                        <div class="news-feed z-depth-1">
                            <!-- News Blog Image -->
                            <div class="image">
-                               <img height="470"  class="responsive-img" src="{{feed.thumbnail}}" alt="news Image">
+                               <img height="470"  class="responsive-img" src="{{feed.thumbnail}}" alt="news Image" onError="this.src='https://placeholdit.imgix.net/~text?txtsize=33&txt=&w=550&h=535';">
                            </div>
                            <!-- News Blog Category -->
                            <!-- <div class="news-category">
