new data source

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,7 +45,7 @@
 
     <img  style="width: 45px;margin: 10px;" src="./assets/img/logo-freeme.png" />
 
-      Free me Today
+      Free me Today - O Portal da Liberdade
 
     <span class="app-toolbar-filler"></span>
     <!-- <button md-button (click)="isDarkTheme = !isDarkTheme">Noticias</button> -->
