--- a/src/app/video-card/video-card.component.html
+++ b/src/app/video-card/video-card.component.html
@@ -2,7 +2,7 @@
                        <div class="news-video z-depth-1">
                            <!-- News Blog Image -->
                            <div class="image">
-                               <img class="responsive-img" src="{{feed.thumbnail}}" alt="news Image">
+                               <img class="responsive-img" src="{{feed.thumbnail}}" onError="this.src='https://placeholdit.imgix.net/~text?txtsize=33&txt=&w=550&h=535';">
                            </div>
                            <!-- News Blog Category -->
                            <div class="news-category">
